Extra Space On Right Issue Solved

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
     }
     .title{
         text-align: right;
-        font-size: 10vmax;
+        font-size: 8vmax;
     }
     .quote{
         padding: 1vmax;
@@ -108,7 +108,6 @@
 #projects{
     background: linear-gradient(167deg, #5fca07 0%, #66ff00 100%);
     box-sizing: border-box;
-    width: 100vw;
 }
 #title-work,#title-contact{
     font-family: 'Roboto', sans-serif;
